opam-version: "1.2"
name: "lwt"
version: "dev"
maintainer: [
  "Anton Bachin <antonbachin@yahoo.com>"
  "Mauricio Fernandez <mfp@acm.org>"
  "Simon Cruanes <simon.cruanes.2007@m4x.org>"
]
authors: [
  "Jérôme Vouillon"
  "Jérémie Dimino"
]
homepage: "https://github.com/ocsigen/lwt"
doc: "https://ocsigen.org/lwt/manual/"
bug-reports: "https://github.com/ocsigen/lwt/issues"
license: "LGPL with OpenSSL linking exception"
dev-repo: "https://github.com/ocsigen/lwt.git"
build: [ 
  [ "ocaml" "src/util/configure.ml" "-use-libev" "%{conf-libev:installed}%" 
                                    "-use-camlp4" "%{camlp4:installed}%" ]
  [ "jbuilder" "build" "-p" name "-j" jobs ] 
]
build-test: [ [ "jbuilder" "runtest" "-p" name ] ]
depends: [
  "ocamlfind" {build & >= "1.5.0"}
  "jbuilder" { build & >= "1.0+beta9" }
  "ppx_tools_versioned" 
  "cppo" { build }
  "result"
]
depopts: [
  "base-threads"
  "base-unix"
  "conf-libev"
  "camlp4"
]
# In practice, Lwt requires OCaml >= 4.02.3, as that is a constraint of the
# dependency jbuilder.
available: [ocaml-version >= "4.02.0" & compiler != "4.02.1+BER"]
messages: [
  "For module Lwt_ssl, please install package lwt_ssl"
  {ssl:installed & !lwt_ssl:installed}
  "For module Lwt_glib, please install package lwt_glib"
  {lablgtk:installed & !lwt_glib:installed}
  "For module Lwt_react, please install package lwt_react"
  {react:installed & !lwt_react:installed}
]
post-messages: [
  "Lwt 3.0.0 made some minor breaking changes, announced in 2.7.0. See
  https://github.com/ocsigen/lwt/issues/308"
]
