opam-version: "1.2"
version: "3.2.0"
maintainer: [
  "Anton Bachin <antonbachin@yahoo.com>"
  "Mauricio Fernandez <mfp@acm.org>"
  "Simon Cruanes <simon.cruanes.2007@m4x.org>"
]
authors: [
  "Jérôme Vouillon"
  "Jérémie Dimino"
]
homepage: "https://github.com/ocsigen/lwt"
doc: "https://ocsigen.org/lwt/manual/"
bug-reports: "https://github.com/ocsigen/lwt/issues"
license: "LGPL with OpenSSL linking exception"
dev-repo: "https://github.com/ocsigen/lwt.git"

build: [
  [ "ocaml" "src/util/configure.ml" "-use-libev" "%{conf-libev:installed}%"
                                    "-use-camlp4" "%{camlp4:installed}%" ]
  [ "jbuilder" "build" "-p" name "-j" jobs ]
  [ "ocaml" "src/util/install_filter.ml" ]
]
build-test: [ [ "jbuilder" "runtest" "-p" name ] ]

depends: [
  "cppo" {build & >= "1.1.0"}
  "jbuilder" {build & >= "1.0+beta13"}
  # We are only using ocamlfind during configuration of the Unix binding.
  "ocamlfind" {build & >= "1.5.0"}
  "ocaml-migrate-parsetree"
  "ppx_tools_versioned"
  # result is needed as long as Lwt still supports OCaml 4.02.
  "result"
]
depopts: [
  "base-threads"
  "base-unix"
  "camlp4"
  "conf-libev"
]
# In practice, Lwt requires OCaml >= 4.02.3, as that is a constraint of the
# dependency jbuilder.
available: [ocaml-version >= "4.02.0" & compiler != "4.02.1+BER"]

messages: [
  "For the PPX, please install package lwt_ppx"
    {!lwt_ppx:installed}
  "For the Camlp4 syntax, please install package lwt_camlp4"
    {camlp4:installed & !lwt_camlp4:installed}
  "For Lwt_log and Lwt_daemon, please install package lwt_log"
    {!lwt_log:installed}
]
post-messages: [
  "Lwt 4.0.0 will make some breaking changes in March 2018. See
  https://github.com/ocsigen/lwt/issues/453"
]
