opam-version: "1.2"
version: "dev"
maintainer: [
  "Anton Bachin <antonbachin@yahoo.com>"
  "Mauricio Fernandez <mfp@acm.org>"
  "Simon Cruanes <simon.cruanes.2007@m4x.org>"
]
authors: [
  "Jérôme Vouillon"
  "Jérémie Dimino"
]
homepage: "https://github.com/ocsigen/lwt"
doc: "https://ocsigen.org/lwt/manual/"
bug-reports: "https://github.com/ocsigen/lwt/issues"
license: "MIT"
dev-repo: "https://github.com/ocsigen/lwt.git"

build: [
  [ "ocaml" "src/util/configure.ml" "-use-libev" "%{conf-libev:installed}%" ]
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  # Bisect_ppx is used only during development. This dependency should be
  # removed when preparing a release.
  "bisect_ppx" {>= "1.3.0"}
  # ocamlfind is a development dependency of the test suite.
  "ocamlfind" {>= "1.7.3-1"}
  "cppo" {build & >= "1.1.0"}
  "dune" {build}
  # result is needed as long as Lwt still supports OCaml 4.02.
  "result"
]
depopts: [
  "base-threads"
  "base-unix"
  "conf-libev"
]
conflicts: [
  # ocamlfind 1.7.3-1 is the earliest release whose built-in "threads" package
  # does not have incorrect error lines. See
  #   https://github.com/ocaml/opam-repository/pull/11071#issuecomment-353131128
  "ocamlfind" {< "1.7.3-1"}
]
# In practice, Lwt requires OCaml >= 4.02.3, as that is a constraint of the
# dependency Dune.
available: [ocaml-version >= "4.02.0" & compiler != "4.02.1+BER"]
