opam-version: "1.2"
version: "1.0.0"
maintainer: [
  "Anton Bachin <antonbachin@yahoo.com>"
]
authors: [
  "Jérémie Dimino"
]
homepage: "https://github.com/ocsigen/lwt"
doc: "https://ocsigen.org/lwt/api/Pa_lwt"
dev-repo: "https://github.com/ocsigen/lwt.git"
bug-reports: "https://github.com/ocsigen/lwt/issues"
license: "LGPL with OpenSSL linking exception"

depends: [
  "camlp4"
  "jbuilder" {build}
  "lwt"
]

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
