opam-version: "1.2"
name: "lwt_glib"
version: "1.0.0"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
authors: [
  "Jérémie Dimino"
]
homepage: "https://github.com/ocsigen/lwt"
doc: "https://ocsigen.org/lwt/manual/"
dev-repo: "https://github.com/ocsigen/lwt.git"
bug-reports: "https://github.com/ocsigen/lwt/issues"
license: "LGPL with OpenSSL linking exception"
install: [
    ["ocamlfind" "install" "lwt_glib" "src/glib/META"]
]
remove: [
    ["ocamlfind" "remove" "lwt_glib"]
]
depends: [
  "lwt" {>= "2.7.0" & < "3.0.0"}
  "lablgtk"
]
