opam-version: "1.2"
version: "dev"
maintainer: [
  "Anton Bachin <antonbachin@yahoo.com>"
  "Mauricio Fernandez <mfp@acm.org>"
  "Simon Cruanes <simon.cruanes.2007@m4x.org>"
]
authors: [
  "Jérémie Dimino"
]
homepage: "https://github.com/ocsigen/lwt"
doc: "https://ocsigen.org/lwt/api/Lwt_glib"
dev-repo: "https://github.com/ocsigen/lwt.git"
bug-reports: "https://github.com/ocsigen/lwt/issues"
license: "LGPL with OpenSSL linking exception"

build: [ [ "jbuilder" "build" "-p" name "-j" jobs ] ]
build-test: [ [ "jbuilder" "runtest" "-p" name ] ]

depends: [
  "base-unix"
  "conf-glib-2" {build}
  "conf-pkg-config" {build}
  "jbuilder" {build & >= "1.0+beta10"}
  "lwt" {>= "3.0.0"}
]
