opam-version: "1.2"
version: "1.0.0"
maintainer: [
  "Anton Bachin <antonbachin@yahoo.com>"
]
authors: [
  "Shawn Wagner"
  "Jérémie Dimino"
]
homepage: "https://github.com/ocsigen/lwt"
doc: "https://ocsigen.org/lwt/api/Lwt_log"
dev-repo: "https://github.com/ocsigen/lwt.git"
bug-reports: "https://github.com/ocsigen/lwt/issues"
license: "LGPL"

depends: [
  "jbuilder" {build}
  # This will be constrained with an upper bound once the log library is fully
  # factored out of package lwt.
  "lwt"
]

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
