opam-version: "1.2"
version: "dev"
maintainer: [
  "Anton Bachin <antonbachin@yahoo.com>"
]
authors: [
  "Gabriel Radanne"
]
homepage: "https://github.com/ocsigen/lwt"
doc: "https://ocsigen.org/lwt/api/Ppx_lwt"
dev-repo: "https://github.com/ocsigen/lwt.git"
bug-reports: "https://github.com/ocsigen/lwt/issues"
license: "LGPL with OpenSSL linking exception"

depends: [
  "jbuilder" {build}
  # This will be constrained with an upper bound once the PPX is fully factored
  # out of package lwt. At that point, the dependencies of lwt on
  # ppx_tools_versioned and ocaml-migrate-parsetree need to be moved to this
  # package.
  "lwt"
]

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
