opam-version: "1.2"
version: "1.0.1"
maintainer: [
  "Anton Bachin <antonbachin@yahoo.com>"
]
authors: [
  "Gabriel Radanne"
]
homepage: "https://github.com/ocsigen/lwt"
doc: "https://ocsigen.org/lwt/api/Ppx_lwt"
dev-repo: "https://github.com/ocsigen/lwt.git"
bug-reports: "https://github.com/ocsigen/lwt/issues"
license: "LGPL with OpenSSL linking exception"

depends: [
  "jbuilder" {build & >= "1.0+beta12"}
  "lwt"
  "ocaml-migrate-parsetree"
  "ppx_tools_versioned"
]

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
