opam-version: "1.2"
version: "1.1.0"
maintainer: [
  "Anton Bachin <antonbachin@yahoo.com>"
  "Mauricio Fernandez <mfp@acm.org>"
  "Simon Cruanes <simon.cruanes.2007@m4x.org>"
]
authors: [
  "Jérémie Dimino"
]
homepage: "https://github.com/ocsigen/lwt"
doc: "https://ocsigen.org/lwt/manual/"
dev-repo: "https://github.com/ocsigen/lwt.git"
bug-reports: "https://github.com/ocsigen/lwt/issues"
license: "LGPL with OpenSSL linking exception"

build: [ [ "jbuilder" "build" "-p" name "-j" jobs ] ]
build-test: [ [ "jbuilder" "runtest" "-p" name ] ]

depends: [
  "jbuilder" {build & >= "1.0+beta10"}
  "lwt" {>= "3.0.0"}
  "react" {>= "1.0.0"}
]
