opam-version: "1.2"
name: "lwt_ssl"
version: "dev"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
authors: [
  "Jérôme Vouillon"
  "Jérémie Dimino"
]
homepage: "https://github.com/ocsigen/lwt"
doc: "https://ocsigen.org/lwt/manual/"
dev-repo: "https://github.com/ocsigen/lwt.git"
bug-reports: "https://github.com/ocsigen/lwt/issues"
license: "LGPL with OpenSSL linking exception"
install: [
    ["ocamlfind" "install" "lwt_ssl" "src/ssl/META"]
]
remove: [
    ["ocamlfind" "remove" "lwt_ssl"]
]
depends: [
  "lwt" {>= "2.7.0"}
  "ssl" {>= "0.5.0"}
]
