(executable
  (name staller)
  (enabled_if (>= %{ocaml_version} 5.4))
  (libraries lwt lwt.unix))

(executable
  (name detector)
  (enabled_if (>= %{ocaml_version} 5.4))
  (libraries lwt lwt.unix runtime_events lwt_runtime_events))

(executable
  (name selfdetector)
  (enabled_if (>= %{ocaml_version} 5.4))
  (libraries unix lwt lwt.unix runtime_events lwt_runtime_events))
