(* -*- tuareg -*- *)

let preprocess =
  let res =
    match Sys.getenv "BISECT_ENABLE" with
    | "yes" -> "(preprocess (pps bisect_ppx))"
    | _ -> ""
    | exception _ -> ""
  in
  res^"\n(preprocess (future_syntax))"

let () = Jbuild_plugin.V1.send @@ {|

(library
 (public_name lwt)
 (synopsis "Monadic promises and concurrent I/O")
 (wrapped false)
 |} ^ preprocess ^ {|
 (libraries bytes result seq)
 (flags (:standard -w +A-29)))

(documentation
 (package lwt))

|}
