(library
 (name tester)
 (libraries lwt lwttester)
 (modules
  (:standard
   \
   main
   dummy
   ocaml_runtime_exc_1
   ocaml_runtime_exc_2
   ocaml_runtime_exc_3
   ocaml_runtime_exc_4
   ocaml_runtime_exc_5
   ocaml_runtime_exc_6)))

(executable
 (name dummy)
 (modules dummy)
 (libraries unix))

(test
 (name main)
 (package lwt)
 (libraries lwttester tester)
 (modules main)
 (deps bytes_io_data %{exe:dummy.exe}))

(test
 (package lwt)
 (name ocaml_runtime_exc_1)
 (libraries lwt lwt.unix)
 (modules ocaml_runtime_exc_1))

(test
 (package lwt)
 (name ocaml_runtime_exc_2)
 (libraries lwt lwt.unix)
 (modules ocaml_runtime_exc_2))

(test
 (package lwt)
 (name ocaml_runtime_exc_3)
 (libraries lwt lwt.unix)
 (modules ocaml_runtime_exc_3))

(test
 (package lwt)
 (name ocaml_runtime_exc_4)
 (libraries lwt lwt.unix)
 (modules ocaml_runtime_exc_4))

(test
 (package lwt)
 (name ocaml_runtime_exc_5)
 (libraries lwt lwt.unix)
 (modules ocaml_runtime_exc_5))

(test
 (package lwt)
 (name ocaml_runtime_exc_6)
 (libraries lwt lwt.unix)
 (modules ocaml_runtime_exc_6))
